[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claudegram"
version = "0.1.0"
description = "Telegram bot bridging chats to Claude"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-telegram-bot>=22.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.14.1",
    "cryptography>=43",
]

[project.scripts]
claudegram = "claudegram.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["claudegram*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
